feat: use images into cms

--- a/src/components/blocks/seo/SEO.astro
+++ b/src/components/blocks/seo/SEO.astro
@@ -1,5 +1,5 @@
 ---
-import placeholderImage from "@/assets/image-placeholder.Daj0eFyq_29eYCW.webp";
+const placeholderImage = "/uploads/image-placeholder.daj0efyq_29eycw.webp";
 interface Alternate {
   lang: 'en' | 'es' | 'fr' | 'x-default'
   href: string
