--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -212,6 +212,7 @@ const computedFooter = {
       title={title}
       description={description}
       lang={lang}
+      ogImage={site?.og_image as string}
       jsonLd={[
         {
           '@context': 'https://schema.org',
